[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_trpubz"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trpubz/packaging_tutorial"
"Bug Tracker" = "https://github.com/trpubz/packaging_tutorial/issues"